tests/baselines/reference/typeName1.errors.txt
typeName1.ts(9,51): error TS2322: Type 'number' is not assignable to type '{ f(s: string): number; f(n: number): string; }'.
typeName1.ts(10,33): error TS2322: Type 'number' is not assignable to type '{ f(s: string): number; }'.
typeName1.ts(11,49): error TS2322: Type 'number' is not assignable to type '{ (s: string): number; (n: number): string; }'.
typeName1.ts(12,64): error TS2322: Type 'number' is not assignable to type '{ x: any; y: any; z: number; f(n: number): string; f(s: string): number; }'.
typeName1.ts(13,100): error TS2322: Type 'number' is not assignable to type '{ (s: string): number; (n: number): string; x: any; y: any; z: number; f(n: number): string; f(s: string): number; }'.
typeName1.ts(14,63): error TS2322: Type 'number' is not assignable to type '{ z: number; f: { (n: number): string; (s: string): number; }; }'.
typeName1.ts(15,28): error TS2322: Type 'number' is not assignable to type '(s: string) => boolean'.
typeName1.ts(16,10): error TS2411: Property 'z' of type 'I' is not assignable to 'string' index type '{ x: any; y: any; }'.
typeName1.ts(16,68): error TS2322: Type 'number' is not assignable to type '{ (): boolean; [s: string]: { x: any; y: any; }; [n: number]: { x: any; y: any; }; z: I; }'.
typeName1.ts(17,10): error TS2322: Type 'number' is not assignable to type 'I'.
typeName1.ts(18,19): error TS2322: Type 'number' is not assignable to type 'I[][][][]'.
typeName1.ts(19,30): error TS2322: Type 'number' is not assignable to type '{ z: I; x: boolean; }[][]'.
typeName1.ts(20,50): error TS2411: Property 'z' of type 'I' is not assignable to 'string' index type '{ x: any; y: any; }'.
typeName1.ts(20,114): error TS2322: Type 'number' is not assignable to type '{ z: I; x: boolean; y: (s: string) => boolean; w: { (): boolean; [s: string]: { x: any; y: any; }; [n: number]: { x: any; y: any; }; z: I; }; }[][]'.
typeName1.ts(21,88): error TS2322: Type 'number' is not assignable to type '{ (): {}; new (): number; new (n: number): number; x: string; w: { y: number; }; }'.
typeName1.ts(22,51): error TS2322: Type 'number' is not assignable to type '{ (): string; f(x: number): boolean; p: any; q: any; }'.
typeName1.ts(23,16): error TS2322: Type 'typeof C' is not assignable to type 'number'.


==== typeName1.ts (17 errors) ====
    interface I {
        k;
    }
    class C {
        public eek:string;
        static zeek:number;
    }
    
    var x1:{ f(s:string):number;f(n:number):string; }=3;
                                                      ~
!!! error TS2322: Type 'number' is not assignable to type '{ f(s: string): number; f(n: number): string; }'.
    var x2:{ f(s:string):number; } =3;
                                    ~
!!! error TS2322: Type 'number' is not assignable to type '{ f(s: string): number; }'.
    var x3:{ (s:string):number;(n:number):string; }=3;
                                                    ~
!!! error TS2322: Type 'number' is not assignable to type '{ (s: string): number; (n: number): string; }'.
    var x4:{ x;y;z:number;f(n:number):string;f(s:string):number; }=3;
                                                                   ~
!!! error TS2322: Type 'number' is not assignable to type '{ x: any; y: any; z: number; f(n: number): string; f(s: string): number; }'.
    var x5:{ (s:string):number;(n:number):string;x;y;z:number;f(n:number):string;f(s:string):number; }=3;
                                                                                                       ~
!!! error TS2322: Type 'number' is not assignable to type '{ (s: string): number; (n: number): string; x: any; y: any; z: number; f(n: number): string; f(s: string): number; }'.
    var x6:{ z:number;f:{(n:number):string;(s:string):number;}; }=3;
                                                                  ~
!!! error TS2322: Type 'number' is not assignable to type '{ z: number; f: { (n: number): string; (s: string): number; }; }'.
    var x7:(s:string)=>boolean=3;
                               ~
!!! error TS2322: Type 'number' is not assignable to type '(s: string) => boolean'.
    var x8:{ z:I;[s:string]:{ x; y; };[n:number]:{x; y;};():boolean; }=3;
             ~
!!! error TS2411: Property 'z' of type 'I' is not assignable to 'string' index type '{ x: any; y: any; }'.
                                                                       ~
!!! error TS2322: Type 'number' is not assignable to type '{ (): boolean; [s: string]: { x: any; y: any; }; [n: number]: { x: any; y: any; }; z: I; }'.
    var x9:I=3;
             ~
!!! error TS2322: Type 'number' is not assignable to type 'I'.
    var x10:I[][][][]=3;
                      ~
!!! error TS2322: Type 'number' is not assignable to type 'I[][][][]'.
    var x11:{z:I;x:boolean;}[][]=3;
                                 ~
!!! error TS2322: Type 'number' is not assignable to type '{ z: I; x: boolean; }[][]'.
    var x12:{z:I;x:boolean;y:(s:string)=>boolean;w:{ z:I;[s:string]:{ x; y; };[n:number]:{x; y;};():boolean; };}[][]=3;
                                                     ~
!!! error TS2411: Property 'z' of type 'I' is not assignable to 'string' index type '{ x: any; y: any; }'.
                                                                                                                     ~
!!! error TS2322: Type 'number' is not assignable to type '{ z: I; x: boolean; y: (s: string) => boolean; w: { (): boolean; [s: string]: { x: any; y: any; }; [n: number]: { x: any; y: any; }; z: I; }; }[][]'.
    var x13:{ new(): number; new(n:number):number; x: string; w: {y: number;}; (): {}; } = 3;
                                                                                           ~
!!! error TS2322: Type 'number' is not assignable to type '{ (): {}; new (): number; new (n: number): number; x: string; w: { y: number; }; }'.
    var x14:{ f(x:number):boolean; p; q; ():string; }=3;
                                                      ~
!!! error TS2322: Type 'number' is not assignable to type '{ (): string; f(x: number): boolean; p: any; q: any; }'.
    var x15:number=C;
                   ~
!!! error TS2322: Type 'typeof C' is not assignable to type 'number'.
    
    
    
    